# gmod-tracy

./: .clang-format  .clang-tidy  .cmake-format.py  .cmake-format.yaml  .cursorignore  .editorconfig  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  license  readme.md
.github/workflows/: cmake-multi-platform.yml
cmake/: cpm-config.cmake
cmake/cpm/: fastgltf-config.cmake  freetype-config.cmake  glm-config.cmake  gsl-config.cmake  imgui-config.cmake  implot-config.cmake  lua_lang-config.cmake  pybind-config.cmake  safetyhook-config.cmake  sdl3-config.cmake  sdl3_mixer-config.cmake  shadercross-config.cmake  spdlog-config.cmake  stb-config.cmake  steam_audio-config.cmake  tinygltf-config.cmake  tinyobjloader-config.cmake  tracy-config.cmake  yaml-cpp-config.cmake
cmake/description/: package.desktop.in  package_description-config.cmake
cmake/toolchains/: llvm_mingw.cmake
src/: CMakeLists.txt  gmod_tracy.cpp  tracy_loader.lua  tracy_loader.lua.in
tests/: CMakeLists.txt
